Apply react-redux with connector
Signed-off-by: Robert Wettstädt <robert.wett@gmail.com>

--- a/ue01/package.json
+++ b/ue01/package.json
@@ -90,9 +90,10 @@
         "module": {
             "loaders": [{
                 "exclude": "/node_modules/",
-                "loaders": [
-                    "babel"
-                ]
+                "loader": "babel",
+                "query": {
+                    "stage": 1
+                }
             }]
         },
         "devtool": "source-map",
