--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ node_modules
 
 # workspace files are user-specific
 *.sublime-workspace
+*.sublime-project
 
 # project files should be checked into the repository, unless a significant
 # proportion of contributors will probably not be using SublimeText
