--- a/ue02/package.json
+++ b/ue02/package.json
@@ -1,102 +1,105 @@
 {
-    "name": "htw-image-processing",
-    "version": "0.0.1",
-    "dependencies": {
-        "normalize.css": "~3.0.1",
-        "react": "^0.14.0",
-        "react-dom": "^0.14.0",
-        "react-redux": "^4.0.0",
-        "redux": "^3.0.2"
+  "name": "htw-image-processing",
+  "version": "0.0.1",
+  "dependencies": {
+    "node-static": "^0.7.7",
+    "normalize.css": "~3.0.1",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer-core": "~5.2.0",
+    "babel-core": "~5.6.15",
+    "babel-eslint": "~4.0.0",
+    "babel-loader": "^5.3.2",
+    "babelify": "~6.0.2",
+    "browser-sync": "~2.7.12",
+    "browserify": "~10.0.0",
+    "browserify-shim": "^3.8.10",
+    "del": "~1.2.0",
+    "envify": "~3.4.0",
+    "foldero": "~0.1.1",
+    "glob": "~5.0.10",
+    "gulp": "~3.9.0",
+    "gulp-changed": "~1.2.1",
+    "gulp-data": "~1.2.0",
+    "gulp-eslint": "~0.14.0",
+    "gulp-htmlmin": "~1.1.3",
+    "gulp-if": "~1.2.5",
+    "gulp-imagemin": "~2.2.1",
+    "gulp-jade": "~1.0.1",
+    "gulp-load-plugins": "~0.10.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-newer": "~0.5.1",
+    "gulp-plumber": "~1.0.1",
+    "gulp-postcss": "~5.1.8",
+    "gulp-rename": "~1.2.2",
+    "gulp-sass": "~2.0.1",
+    "gulp-sourcemaps": "~1.5.2",
+    "gulp-uglify": "~1.2.0",
+    "gulp-util": "~3.0.5",
+    "imagemin-pngquant": "~4.0.0",
+    "imagemin-svgo": "~4.0.0",
+    "jade": "~1.11.0",
+    "lodash": "~3.2.0",
+    "minimist": "~1.1.1",
+    "rimraf": "~2.2.0",
+    "vinyl-buffer": "~1.0.0",
+    "vinyl-source-stream": "~1.1.0",
+    "watchify": "~3.3.0 ",
+    "webpack": "^1.12.2",
+    "worker-loader": "^0.6.0",
+    "wrench": "~1.5.8"
+  },
+  "engines": {
+    "node": ">=0.12.0"
+  },
+  "//": "CUSTOM CONFIGURATION",
+  "config": {
+    "//": "Entry files",
+    "host": "127.0.0.1",
+    "port": "3000",
+    "baseUrl": "./",
+    "directories": {
+      "source": "src",
+      "destination": "build",
+      "temporary": "tmp",
+      "//": "Directories relative to `source` directory",
+      "modules": "_modules",
+      "layouts": "_layouts",
+      "images": "_images",
+      "styles": "_styles",
+      "fonts": "_styles/fonts",
+      "scripts": "_scripts",
+      "data": "_data"
     },
-    "devDependencies": {
-        "autoprefixer-core": "~5.2.0",
-        "babel-core": "~5.6.15",
-        "babel-eslint": "~4.0.0",
-        "babel-loader": "^5.3.2",
-        "babelify": "~6.0.2",
-        "browser-sync": "~2.7.12",
-        "browserify": "~10.0.0",
-        "browserify-shim": "^3.8.10",
-        "del": "~1.2.0",
-        "envify": "~3.4.0",
-        "foldero": "~0.1.1",
-        "glob": "~5.0.10",
-        "gulp": "~3.9.0",
-        "gulp-changed": "~1.2.1",
-        "gulp-data": "~1.2.0",
-        "gulp-eslint": "~0.14.0",
-        "gulp-htmlmin": "~1.1.3",
-        "gulp-if": "~1.2.5",
-        "gulp-imagemin": "~2.2.1",
-        "gulp-jade": "~1.0.1",
-        "gulp-load-plugins": "~0.10.0",
-        "gulp-minify-css": "^1.2.1",
-        "gulp-newer": "~0.5.1",
-        "gulp-plumber": "~1.0.1",
-        "gulp-postcss": "~5.1.8",
-        "gulp-rename": "~1.2.2",
-        "gulp-sass": "~2.0.1",
-        "gulp-sourcemaps": "~1.5.2",
-        "gulp-uglify": "~1.2.0",
-        "gulp-util": "~3.0.5",
-        "imagemin-pngquant": "~4.0.0",
-        "imagemin-svgo": "~4.0.0",
-        "jade": "~1.11.0",
-        "lodash": "~3.2.0",
-        "minimist": "~1.1.1",
-        "rimraf": "~2.2.0",
-        "vinyl-buffer": "~1.0.0",
-        "vinyl-source-stream": "~1.1.0",
-        "watchify": "~3.3.0 ",
-        "webpack": "^1.12.2",
-        "worker-loader": "^0.6.0",
-        "wrench": "~1.5.8"
+    "entries": {
+      "js": "main**.js",
+      "css": "main**.{sass,scss}"
     },
-    "engines": {
-        "node": ">=0.12.0"
+    "entry": [
+      "./src/_scripts/main.js"
+    ],
+    "output": {
+      "path": "tmp/scripts",
+      "publicPath": "scripts/",
+      "filename": "[name].js",
+      "chunkFilename": "[chunkhash].js"
     },
-    "//": "CUSTOM CONFIGURATION",
-    "config": {
-        "//": "Entry files",
-        "host": "127.0.0.1",
-        "port": "3000",
-        "baseUrl": "./",
-        "directories": {
-            "source": "src",
-            "destination": "build",
-            "temporary": "tmp",
-            "//": "Directories relative to `source` directory",
-            "modules": "_modules",
-            "layouts": "_layouts",
-            "images": "_images",
-            "styles": "_styles",
-            "fonts": "_styles/fonts",
-            "scripts": "_scripts",
-            "data": "_data"
-        },
-        "entries": {
-            "js": "main**.js",
-            "css": "main**.{sass,scss}"
-        },
-        "entry": [
-            "./src/_scripts/main.js"
-        ],
-        "output": {
-            "path": "tmp/scripts",
-            "publicPath": "scripts/",
-            "filename": "[name].js",
-            "chunkFilename": "[chunkhash].js"
-        },
-        "module": {
-            "loaders": [{
-                "exclude": "/node_modules/",
-                "loader": "babel",
-                "query": {
-                    "stage": 1
-                }
-            }]
-        },
-        "devtool": "source-map",
-        "watch": true
-    }
+    "module": {
+      "loaders": [
+        {
+          "exclude": "/node_modules/",
+          "loader": "babel",
+          "query": {
+            "stage": 1
+          }
+        }
+      ]
+    },
+    "devtool": "source-map",
+    "watch": true
+  }
 }
